# simple_irc_bot

./: Cargo.toml
src/: main.rs  twitch.rs
